# halo2-workshop

./: .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
circom/: README.md
halo2/: Cargo.toml  README.md
halo2/benches/: ecdsa.rs  is_zero2.rs  iszero.rs  keccak_bit.rs  keccak_packed.rs  range.rs
halo2/tests/: ecdsa_example.rs  tutorial.rs  tutorial_prover.rs
