[package]
name = "halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2023_04_20", version = "0.1.0" }
ecdsa = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2023_04_20", version = "0.1.0" }
ff = "0.13.0"
group = "0.13.0"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20", version = "0.2.0" }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", default-features = false, tag = "v2023_04_20", version = "0.1.0" }
integer = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2023_04_20", version = "0.1.0" }
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", tag = "v2023_04_20", version = "0.1.0" }
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
rand = "0.8.5"
rand_core = { version = "0.6.4", default-features = false }
rayon = "1.8.0"
zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", version = "0.1.0" }
pairing = { git = 'https://github.com/EDGDrummond/pairing', package = "pairing_bn256"} 

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.5.1"

[[bench]]
name = "iszero"
harness = false

[[bench]]
name = "range"
harness = false

[[bench]]
name = "ecdsa"
harness = false

[[bench]]
name = "keccak_bit"
harness = false

[[bench]]
name = "keccak_packed"
harness = false